--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
     with:
       cloud: aws
       environment: qa
-      action: ${{ github.event.inputs.action }}
+      action: ${{ github.event.inputs.action//apply }}
       public_subnet_count: 1
       private_subnet_count: 1
       subnet_newbits: 4
