--- a/.github/workflows/terraform-reusable.yml
+++ b/.github/workflows/terraform-reusable.yml
@@ -5,13 +5,13 @@ on:
     inputs:
       cloud:
         required: true
-        type: string
+        type: string   
       environment:
         required: true
-        type: string
+        type: string  
       action:
         required: true
-        type: string     
+        type: string  
 
 permissions:
   id-token: write
@@ -23,12 +23,14 @@ jobs:
     environment: ${{ inputs.environment }}
 
     steps:
+     
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      # ---------------------------
       - name: Azure Login (OIDC)
         if: inputs.cloud == 'azure'
         uses: azure/login@v2
@@ -36,14 +38,6 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Export Azure vars for Terraform
-        if: inputs.cloud == 'azure'
-        run: |
-          echo "ARM_USE_OIDC=true" >> $GITHUB_ENV
-          echo "ARM_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
 
       - name: AWS Login (OIDC)
         if: inputs.cloud == 'aws'
@@ -54,26 +48,24 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ${{ inputs.cloud == 'azure' && 'Azure' || 'AWS' }}
+        working-directory: ${{ inputs.cloud }}/${{ inputs.environment }}
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: ${{ inputs.cloud == 'azure' && 'Azure' || 'AWS' }}
+        working-directory: ${{ inputs.cloud }}/${{ inputs.environment }}
 
       - name: Terraform Plan
         if: inputs.action == 'apply'
-        run: |
-          terraform plan \
-            -var-file=envs/${{ inputs.environment }}.tfvars \
-            -out=tfplan
-        working-directory: ${{ inputs.cloud == 'azure' && 'Azure' || 'AWS' }}
+        run: terraform plan -out=tfplan
+        working-directory: ${{ inputs.cloud }}/${{ inputs.environment }}
 
+      # ---------------------------
       - name: Terraform Apply
         if: inputs.action == 'apply'
         run: terraform apply -auto-approve tfplan
-        working-directory: ${{ inputs.cloud == 'azure' && 'Azure' || 'AWS' }}
+        working-directory: ${{ inputs.cloud }}/${{ inputs.environment }}
 
       - name: Terraform Destroy
         if: inputs.action == 'destroy'
-        run: terraform destroy -auto-approve -var-file=envs/${{ inputs.environment }}.tfvars
-        working-directory: ${{ inputs.cloud == 'azure' && 'Azure' || 'AWS' }}
+        run: terraform destroy -auto-approve
+        working-directory: ${{ inputs.cloud }}/${{ inputs.environment }}
